--- a/modules/loan/view/loan_increment_tree.xml
+++ b/modules/loan/view/loan_increment_tree.xml
@@ -8,6 +8,7 @@
     <field name="rate" factor="100">
         <suffix string="%"/>
     </field>
+    <field name="payment_frequency"/>
     <field name="start_date"/>
     <field name="end_date"/>
     <field name="deferal"/>
