contract : contacts are versioned by date fix #2232 http://rietveld.coopengo.com/10580001/

--- a/modules/contract/view/contract_contact_form.xml
+++ b/modules/contract/view/contract_contact_form.xml
@@ -3,6 +3,9 @@
     <label name="contract"/>
     <field name="contract"/>
     <newline/>
+    <label name="date"/>
+    <field name="date"/>
+    <newline/>
     <label name="type"/>
     <field name="type"/>
     <label name="party"/>
