--- a/modules/contract/view/contract_contact_list.xml
+++ b/modules/contract/view/contract_contact_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <tree string="Contract Contact">
     <field name="contract"/>
+    <field name="date"/>
     <field name="type" readonly="1"/>
     <field name="party" readonly="1"/>
     <field name="address"/>
