claim : refactored http://rietveld.coopengo.com/16220002/

--- a/modules/benefit/view/loss_description_form.xml
+++ b/modules/benefit/view/loss_description_form.xml
@@ -9,6 +9,9 @@
     <label name="with_end_date"/>
     <field name="with_end_date"/>
     <newline/>
+    <label name="loss_kind"/>
+    <field name="loss_kind"/>
+    <newline/>
     <notebook>
         <page string="Events" id="events">
             <field name="event_descs"/>
