--- a/modules/claim/view/claim_form.xml
+++ b/modules/claim/view/claim_form.xml
@@ -25,8 +25,7 @@
         <page string="Losses" id="losses">
             <field name="losses" group="multi_losses" mode="tree" view_ids="claim.loss_simple_tree" xexpand="0" xfill="0"/>
             <field name="losses" group="multi_losses" mode="form" relation="claim.loss" relation_field="claim" view_ids="claim.loss_view_form"/>
-            <field name="losses" group="multi_losses" mode="form" relation="contract.service" relation_field="loss" view_ids="claim.service_view_form"/>
-            <field name="losses" group="multi_losses" mode="form" relation="claim.indemnification" relation_field="service" view_ids="claim.indemnification_view_form"/>
+            <field name="losses" group="multi_losses" mode="form" relation="claim.service" relation_field="loss" view_ids="claim.claim_service_view_form"/>
         </page>
         <page string="Documents" id="documents">
             <field name="documents" xexpand="1" xfill="1" yexpand="1" yfill="1" mode="form"/>
