--- a/modules/health/view/party_complement_tree.xml
+++ b/modules/health/view/party_complement_tree.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Health Party Complement">
+    <field name="date"/>
     <field name="party"/>
 </tree>
