--- a/modules/health/view/party_form.xml
+++ b/modules/health/view/party_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <data>
     <xpath expr="/form/notebook/page[@id='general']" position="inside">
-        <field name="health_complement" colspan="4" mode="form,tree"/>
+        <field name="health_complement" colspan="4"/>
     </xpath>
     <xpath expr="/form" position="inside">
         <field name="is_health"/>
