endorsement_insurance : remove option endorsement allows to void fix #2307 http://rietveld.coopengo.com/13350001/

--- a/modules/endorsement_insurance/view/remove_option_selector_form.xml
+++ b/modules/endorsement_insurance/view/remove_option_selector_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <form string="Option">
-    <label name="to_remove"/>
-    <field name="to_remove"/>
+    <label name="action"/>
+    <field name="action"/>
     <label name="option"/>
     <field name="option"/>
     <label name="covered_element"/>
