report_engine: fix #2296 store generated documents on server filesystem
http://rietveld.coopengo.com/16370001/

--- a/modules/report_engine/view/report_template_form.xml
+++ b/modules/report_engine/view/report_template_form.xml
@@ -16,6 +16,8 @@
     <field name="modifiable_before_printing"/>
     <label name="template_extension"/>
     <field name="template_extension"/>
+    <label name="export_dir"/>
+    <field name="export_dir"/>
     <separator id="automatic_generation" string="Automatic Generation" colspan="4"/>
     <label name="convert_to_pdf"/>
     <field name="convert_to_pdf" colspan="3"/>
