account_payment_cog: Add wizard in order to manually fail payment Fix #2285: https://redmine.coopengo.com/issues/2285 http://rietveld.coopengo.com/10600001

--- a/modules/account_payment_cog/view/payment_form.xml
+++ b/modules/account_payment_cog/view/payment_form.xml
@@ -4,5 +4,7 @@
         <label name="reject_description"/>
         <field name="reject_description"/>
     </xpath>
+    <xpath expr="/form/group/group[@id='buttons']/button[@name='fail']" position="replace">
+        <button string="Fail" name="button_fail_payments"/>
+    </xpath>
 </data>
-
