contract: improve contact management Fix #2340: https://redmine.coopengo.com/issues/2340 http://rietveld.coopengo.com/15260004

--- a/modules/contract/view/contract_contact_form.xml
+++ b/modules/contract/view/contract_contact_form.xml
@@ -5,6 +5,8 @@
     <newline/>
     <label name="date"/>
     <field name="date"/>
+    <label name="end_date"/>
+    <field name="end_date"/>
     <newline/>
     <label name="type"/>
     <field name="type"/>
