--- a/modules/contract/view/option_form.xml
+++ b/modules/contract/view/option_form.xml
@@ -14,6 +14,11 @@
             <field name="end_date"/>
             <label name="status"/>
             <field name="status"/>
+            <newline/>
+            <field name="current_extra_data" colspan="2" no_command="1"/>
+        </page>
+        <page name="versions">
+            <field name="versions"/>
         </page>
     </notebook>
 </form>
