party_cog : replace lang selection widget with many2one
Fix : #2398
Review : http://rietveld.coopengo.com/12650001/

--- a/modules/party_cog/view/party_form.xml
+++ b/modules/party_cog/view/party_form.xml
@@ -70,7 +70,7 @@
             <field name="email"/>
             <newline/>
             <label name="lang"/>
-            <field name="lang" widget="selection"/>
+            <field name="lang"/>
         </group>
         <field name="relations" colspan="2" view_ids="party_cog.relation_view_editable_list"/>
     </xpath>
