--- a/modules/loan/view/loan_increment_tree.xml
+++ b/modules/loan/view/loan_increment_tree.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <tree string="Loan Increments" editable="bottom">
     <field name="number" readonly="1"/>
-    <field name="number_of_payments"/>
-    <field name="payment_amount">
+    <field name="begin_balance">
         <suffix name="currency_symbol"/>
     </field>
     <field name="rate" factor="100">
         <suffix string="%"/>
     </field>
+    <field name="number_of_payments"/>
     <field name="payment_frequency"/>
+    <field name="payment_amount">
+        <suffix name="currency_symbol"/>
+    </field>
     <field name="start_date"/>
     <field name="end_date"/>
     <field name="deferal"/>
-    <field name="begin_balance"/>
     <field name="loan" tree_invisible="1"/>
+    <field name="dates_are_calculated" tree_invisible="1"/>
+    <field name="manual"/>
 </tree>
