--- a/modules/loan/view/loan_increment_form.xml
+++ b/modules/loan/view/loan_increment_form.xml
@@ -18,6 +18,6 @@
     <label name="deferal"/>
     <field name="deferal"/>
     <field name="loan" invisible="1"/>
-    <field name="dates_are_calculated" invisible="1"/>
+    <field name="loan_state" invisible="1"/>
     <field name="manual" invisible="1"/>
 </form>
