--- a/modules/loan/view/loan_increment_tree.xml
+++ b/modules/loan/view/loan_increment_tree.xml
@@ -16,6 +16,6 @@
     <field name="end_date"/>
     <field name="deferal"/>
     <field name="loan" tree_invisible="1"/>
-    <field name="dates_are_calculated" tree_invisible="1"/>
-    <field name="manual"/>
+    <field name="loan_state" tree_invisible="1"/>
+    <field name="manual" tree_invisible="1"/>
 </tree>
