endorsement : Add 'active' field on endorsement definitions
review http://rietveld.coopengo.com/12680002

--- a/modules/endorsement/view/endorsement_definition_form.xml
+++ b/modules/endorsement/view/endorsement_definition_form.xml
@@ -6,6 +6,8 @@
     <field name="code"/>
     <label name="preview_state"/>
     <field name="preview_state"/>
+    <label name="active"/>
+    <field name="active"/>
     <newline/>
     <notebook>
         <page name="ordered_endorsement_parts">
