--- a/modules/endorsement/view/endorsement_definition_list.xml
+++ b/modules/endorsement/view/endorsement_definition_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
 <tree string="Endorsement Definitions">
+    <field name="active"/>
     <field name="code"/>
     <field name="name"/>
     <field name="is_technical"/>
