multiple_modules : allow to define report template to print at given event fix #2345 http://rietveld.coopengo.com/18370001/

--- a/modules/endorsement/view/endorsement_definition_form.xml
+++ b/modules/endorsement/view/endorsement_definition_form.xml
@@ -16,5 +16,8 @@
         <page name="products">
             <field name="products"/>
         </page>
+        <page name="report_templates">
+            <field name="report_templates"/>
+        </page>
     </notebook>
 </form>
