--- a/modules/endorsement_commission/view/change_contract_commission_form.xml
+++ b/modules/endorsement_commission/view/change_contract_commission_form.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0"?>
-<form string="Change Contract Broker">
+<form string="Change Contract Commission">
     <label name="current_broker"/>
     <field name="current_broker" colspan="3"/>
     <label name="current_agent"/>
     <field name="current_agent" colspan="3"/>
+    <label name="current_agency"/>
+    <field name="current_agency" colspan="3"/>
     <newline/>
     <label name="broker"/>
     <field name="broker" colspan="3"/>
     <label name="agent"/>
     <field name="agent" colspan="3"/>
+    <label name="agency"/>
+    <field name="agency" colspan="3"/>
     <newline/>
     <field name="product"/>
     <field name="endorsement_part"/>
     <field name="broker_party"/>
-    <field name="current_plan"/>
 </form>
