endorsement : Improve view for manage options form detail
review http://rietveld.coopengo.com/16430001

--- a/modules/endorsement/view/contract_manage_options_option_displayer_form.xml
+++ b/modules/endorsement/view/contract_manage_options_option_displayer_form.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
-<form string="Option">
-    <label name="display_name"/>
-    <field name="display_name"/>
+<form string="Option" col="2">
     <label name="parent_rec_name"/>
     <field name="parent_rec_name"/>
     <label name="action"/>
