--- a/modules/contract_life_clause/view/option_form.xml
+++ b/modules/contract_life_clause/view/option_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/notebook" position="inside">
+    <xpath expr="/form/notebook/page[@id='main_data']" position="after">
         <page name="beneficiary_clause">
             <label name="beneficiary_clause"/>
             <field name="beneficiary_clause"/>
