contract_insurance_document_request : rename "documents" tabs to "requested documents" http://rietveld.coopengo.com/19220001/

--- a/modules/contract_insurance_document_request/view/contract_form.xml
+++ b/modules/contract_insurance_document_request/view/contract_form.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <data>
     <xpath expr="/form/notebook/page[@id='contacts']" position="before">
-        <page string="Documents" id="documents">
+        <page string="Requested Documents" id="requested_documents">
             <field name="document_request_lines" colspan="4"/>
         </page>
     </xpath>
