--- a/modules/contract/view/contract_tree.xml
+++ b/modules/contract/view/contract_tree.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <tree string="Contract">
-    <field name="rec_name"/>
+    <field name="rec_name" icon="icon"/>
     <field name="subscriber"/>
     <field name="status"/>
     <field name="start_date"/>
     <field name="end_date"/>
     <field name="product"/>
+    <field name="color" tree_invisible="1"/>
 </tree>
