--- a/modules/rule_engine/view/rule_engine_form.xml
+++ b/modules/rule_engine/view/rule_engine_form.xml
@@ -6,6 +6,8 @@
     <field name="short_name"/>
     <label name="type_"/>
     <field name="type_"/>
+    <label name="result_type"/>
+    <field name="result_type"/>
     <label name="context"/>
     <field name="context"/>
     <label name="status"/>
