contract_coverage_amount: Reboot review: http://rietveld.coopengo.com/17310002/

--- a/modules/contract/view/option_form.xml
+++ b/modules/contract/view/option_form.xml
@@ -23,4 +23,5 @@
             <field name="versions"/>
         </page>
     </notebook>
+    <field name="parent_contract" invisible="1"/>
 </form>
