commission_insurance : Allow to generate multiple commissions per invoice_line
Fix #2541
review http://rietveld.coopengo.com/15370002

--- a/modules/commission_insurance/view/commission_list.xml
+++ b/modules/commission_insurance/view/commission_list.xml
@@ -17,7 +17,7 @@
     </xpath>
     <xpath expr="/tree/field[@name='amount']" position="after">
         <field name="commission_rate"/>
-        <field name="parent_line_start"/>
-        <field name="parent_line_end"/>
+        <field name="start"/>
+        <field name="end"/>
     </xpath>
 </data>
