--- a/modules/commission_insurance/view/plan_form.xml
+++ b/modules/commission_insurance/view/plan_form.xml
@@ -10,6 +10,9 @@
                 <field name="lines" colspan="2" view_ids="commission.plan_line_view_list_sequence"/>
                 <field name="commissioned_products"/>
             </page>
+            <page name="computation_dates">
+                <field name="computation_dates"/>
+            </page>
             <page id="admin" string="Administration">
                 <field name="tags" colspan="2"/>
             </page>
