--- a/modules/endorsement/view/contract_manage_options_option_displayer_form.xml
+++ b/modules/endorsement/view/contract_manage_options_option_displayer_form.xml
@@ -11,6 +11,5 @@
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
-    <label name="extra_data"/>
-    <field name="extra_data" no_command="1"/>
+    <field name="extra_data" no_command="1" colspan="2"/>
 </form>
