--- a/modules/contract_insurance_invoice/view/fee_form.xml
+++ b/modules/contract_insurance_invoice/view/fee_form.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <data>
-    <xpath expr="/form/field[@name='frequency']" position="after">
+    <xpath expr="/form" position="inside">
         <label name="product"/>
         <field name="product"/>
     </xpath>
