--- a/modules/premium/view/fee_form.xml
+++ b/modules/premium/view/fee_form.xml
@@ -7,22 +7,20 @@
     <label name="type"/>
     <field name="type"/>
     <newline/>
-    <group col="1" id="label_amount_rate">
-        <label name="amount" yfill="1" xexpand="1" yexpand="1"/>
-        <label name="rate" yfill="1" xexpand="1" yexpand="1"/>
-    </group>
-    <group col="1" id="amount_rate">
-        <group name="amount" string="">
-            <field name="amount" xalign="1" xexpand="0"/>
-            <label name="currency_symbol" string="" xexpand="1" xalign="0"/>
-        </group>
-        <group name="rate" string="">
-            <field name="rate" factor="100" xexpand="0"/>
-            <label name="rate" string="%" xexpand="1" xalign="0"/>
-        </group>
+    <label name="amount"/>
+    <group name="amount" string="">
+        <field name="amount" xexpand="0"/>
+        <label name="currency_symbol" string="" xexpand="1" xalign="0"/>
     </group>
     <label name="frequency"/>
     <field name="frequency"/>
+    <newline/>
+    <label name="rate"/>
+    <group name="rate" string="">
+        <field name="rate" factor="100" xexpand="0"/>
+        <label name="rate" string="%" xexpand="1" xalign="0"/>
+    </group>
+    <newline/>
     <label name="allow_override"/>
     <field name="allow_override"/>
 </form>
