commission_insurance: Add code on agent to fix JSON import (#2112)
* commission_insurance: Add code on agent to fix JSON import of 2 different agents with the same commission plan and party
Fix #9712

--- a/modules/commission_insurance/view/agent_form.xml
+++ b/modules/commission_insurance/view/agent_form.xml
@@ -4,6 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form" position="inside">
         <newline/>
+        <label name="code"/>
+        <field name="code"/>
         <label name="agent_payment_term"/>
         <field name="agent_payment_term"/>
         <newline/>
