--- a/modules/contract/view/sub_status_form.xml
+++ b/modules/contract/view/sub_status_form.xml
@@ -2,9 +2,9 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form>
-    <label name="name" xalign="0"/>
+    <label name="name"/>
     <field name="name"/>
-    <label name="code" xalign="0"/>
+    <label name="code"/>
     <field name="code"/>
     <label name="status"/>
     <field name="status"/>
