--- a/modules/batch_launcher/view/batch_launcher_start_form.xml
+++ b/modules/batch_launcher/view/batch_launcher_start_form.xml
@@ -10,7 +10,7 @@ this repository contains the full copyright notices and license terms. -->
     <label name="treatment_date"/>
     <field name="treatment_date"/>
     <newline/>
-    <field name="parameters" expand_toolbar="0" colspan="4"/>
+    <field name="parameters" colspan="4"/>
     <field name="available_batches" invisible="1"/>
     <field name="loaded_parameters" invisible="1"/>
     <field name="has_treatment_date" invisible="1"/>
