report_engine: Add pyson condition to report template (#2211)
* report_engine : Add pyson condition to report template
Fix #9985

--- a/modules/report_engine/view/report_template_form.xml
+++ b/modules/report_engine/view/report_template_form.xml
@@ -10,6 +10,8 @@ this repository contains the full copyright notices and license terms. -->
     <field name="on_model" widget="selection"/>
     <label name="kind"/>
     <field name="kind"/>
+    <label name="pyson_condition"/>
+    <field name="pyson_condition" colspan="3"/>
     <label name="input_kind"/>
     <field name="input_kind"/>
     <label name="process_method"/>
