--- a/modules/claim_indemnification_group/view/option_benefit_form.xml
+++ b/modules/claim_indemnification_group/view/option_benefit_form.xml
@@ -2,6 +2,8 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form col="2">
+    <label name="benefit"/>
+    <field name="benefit"/>
     <label name="deductible_rule"/>
     <field name="deductible_rule" widget="selection"/>
     <field name="deductible_rule_extra_data" colspan="2" no_command="1"/>
