--- a/modules/contract_insurance/view/covered_element_simple_form.xml
+++ b/modules/contract_insurance/view/covered_element_simple_form.xml
@@ -4,8 +4,6 @@ this repository contains the full copyright notices and license terms. -->
 <form col="2">
     <label name="contract"/>
     <field name="contract"/>
-    <label name="main_contract"/>
-    <field name="main_contract"/>
     <label name="item_desc"/>
     <field name="item_desc" widget="selection"/>
     <label name="name"/>
@@ -18,6 +16,10 @@ this repository contains the full copyright notices and license terms. -->
     <field name="manual_start_date"/>
     <label name="manual_end_date"/>
     <field name="manual_end_date"/>
+    <label name="end_date"/>
+    <field name="end_date"/>
+    <label name="end_reason"/>
+    <field name="end_reason"/>
     <field name="item_kind"/>
     <field name="is_person"/>
     <field name="party_extra_data" invisible="1"/>
