--- a/modules/contract_group/view/enrollment_list.xml
+++ b/modules/contract_group/view/enrollment_list.xml
@@ -4,9 +4,11 @@ this repository contains the full copyright notices and license terms. -->
 <tree>
     <field name="rec_name" icon="icon"/>
     <field name="manual_start_date"/>
-    <field name="manual_end_date"/>
+    <field name="end_date"/>
     <field name="end_reason"/>
     <field name="contract"/>
     <field name="subscriber"/>
     <field name="parent"/>
+    <button name="button_open_sub_elements" string="Sub Elements" keyword="relate" tree_invisible="1"/>
+    <field name="has_sub_covered_elements" tree_invisible="1"/>
 </tree>
