--- a/modules/contract_group/view/party_enrollment_form.xml
+++ b/modules/contract_group/view/party_enrollment_form.xml
@@ -12,6 +12,8 @@ this repository contains the full copyright notices and license terms. -->
     <field name="manual_start_date"/>
     <label name="manual_end_date"/>
     <field name="manual_end_date"/>
+    <label name="end_date"/>
+    <field name="end_date"/>
     <label name="end_reason"/>
     <field name="end_reason" widget="selection"/>
     <label name="contract_exit_date"/>
