claim_pasrau: add factor to rate views (#2229)

--- a/modules/claim_pasrau/view/pasrau_default_rate_form.xml
+++ b/modules/claim_pasrau/view/pasrau_default_rate_form.xml
@@ -15,5 +15,5 @@ this repository contains the full copyright notices and license terms. -->
 	<field name="income_higher_bound"/>
     <newline/>
 	<label name="rate"/>
-	<field name="rate"/>
+	<field name="rate" factor="100"/>
 </form>
