--- a/modules/claim_pasrau/view/party_pasrau_rate_form.xml
+++ b/modules/claim_pasrau/view/party_pasrau_rate_form.xml
@@ -5,7 +5,7 @@ this repository contains the full copyright notices and license terms. -->
 	<label name="party"/>
 	<field name="party"/>
 	<label name="pasrau_tax_rate"/>
-	<field name="pasrau_tax_rate"/>
+	<field name="pasrau_tax_rate" factor="100"/>
 	<label name="effective_date"/>
 	<field name="effective_date"/>
 	<label name="origin"/>
