--- a/modules/claim_pasrau/view/party_pasrau_rate_tree.xml
+++ b/modules/claim_pasrau/view/party_pasrau_rate_tree.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree >
-	<field name="pasrau_tax_rate"/>
+	<field name="pasrau_tax_rate" factor="100"/>
 	<field name="party"/>
 	<field name="effective_date"/>
 	<field name="origin"/>
