--- a/modules/report_engine_text_message/view/report_template_form.xml
+++ b/modules/report_engine_text_message/view/report_template_form.xml
@@ -2,13 +2,14 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='split_reports']" position="after">
-        <newline/>
-        <label name="message_sender"/>
-        <field name="message_sender"/>
-        <label name="phone_number"/>
-        <field name="phone_number"/>
-        <label name="message"/>
-        <field name="message" colspan="3"/>
+    <xpath expr="//notebook/page[@name='event_type_actions']" position="before">
+        <page name="message">
+            <label name="message_sender"/>
+            <field name="message_sender"/>
+            <label name="phone_number"/>
+            <field name="phone_number"/>
+            <label name="message"/>
+            <field name="message" colspan="3"/>
+        </page>
     </xpath>
 </data>
