offered_insurance: Replace multiple small list to notebook on insurer view form (#2231)

--- a/modules/offered_insurance/view/insurer_form.xml
+++ b/modules/offered_insurance/view/insurer_form.xml
@@ -4,5 +4,9 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="party"/>
     <field name="party"/>
-    <field name="delegations" mode="tree" colspan="4"/>
+    <notebook colspan="4">
+        <page name="delegations">
+            <field name="delegations" mode="tree" colspan="4"/>
+        </page>
+    </notebook>
 </form>
