--- a/modules/commission_insurer/view/insurer_form.xml
+++ b/modules/commission_insurer/view/insurer_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='party']" position="after">
+    <xpath expr="/form/notebook" position="before">
         <label name="group_insurer_invoices"/>
         <field name="group_insurer_invoices"/>
     </xpath>
