--- a/modules/insurer_reporting/view/insurer_form.xml
+++ b/modules/insurer_reporting/view/insurer_form.xml
@@ -2,7 +2,9 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='delegations']" position="after">
-        <field name='stock_reports' widget='one2many' colspan="4"/>
+    <xpath expr="//notebook" position="inside">
+        <page name='stock_reports'>
+            <field name='stock_reports' widget='one2many' colspan="4"/>
+        </page>
     </xpath>
 </data>
