--- a/modules/report_engine_primotexto/view/report_template_form.xml
+++ b/modules/report_engine_primotexto/view/report_template_form.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/form/field[@name='phone_number']" position="after">
+    <xpath expr="//field[@name='phone_number']" position="after">
         <newline/>
         <label name="campaign_name"/>
         <field name="campaign_name"/>
