contract_insurance: Add configuration to allow showing the covered_element's name (#2236)
Fix #10055

--- a/modules/contract_group/view/enrollment_form.xml
+++ b/modules/contract_group/view/enrollment_form.xml
@@ -31,5 +31,6 @@ this repository contains the full copyright notices and license terms. -->
     <group id="invisible">
         <button name="button_open_sub_elements" string="Sub Elements" keyword="relate"/>
         <field name="has_sub_covered_elements" invisible="1"/>
+        <field name="show_name" invisible="1"/>
     </group>
 </form>
