--- a/modules/contract_insurance/view/covered_element_simple_form.xml
+++ b/modules/contract_insurance/view/covered_element_simple_form.xml
@@ -26,4 +26,5 @@ this repository contains the full copyright notices and license terms. -->
     <field name="versions" invisible="1"/>
     <field name="product" invisible="1"/>
     <field name="options" invisible="1"/>
+    <field name="show_name" invisible="1"/>
 </form>
