--- a/modules/contract_insurance/view/covered_element_form.xml
+++ b/modules/contract_insurance/view/covered_element_form.xml
@@ -44,4 +44,5 @@ this repository contains the full copyright notices and license terms. -->
     <newline/>
     <field name="product" invisible="1"/>
     <field name="party_extra_data" invisible="1"/>
+    <field name="show_name" invisible="1"/>
 </form>
