commission_insurance_prepayment: Rename with_prepayment in has_prepayment (#2269)
Fields names starting with with are bad. Also, we check
whether any commission agent in the distribution hierarchy
uses prepayments rather than stop on the agent of the
contract

Fix #9915

--- a/modules/commission_insurance_prepayment/view/contract_form.xml
+++ b/modules/commission_insurance_prepayment/view/contract_form.xml
@@ -3,7 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/group[@id='button_change_start_date']" position="inside">
-        <field name="with_prepayment"/>
+        <field name="has_prepayment"/>
         <button string="Synchronize Prepayment" name="sync_prepayment"/>
     </xpath>
 </data>
