--- a/modules/commission_insurance_prepayment/view/contract_list.xml
+++ b/modules/commission_insurance_prepayment/view/contract_list.xml
@@ -3,7 +3,7 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/tree/field[@name='color']" position="after">
-        <field name="with_prepayment" tree_invisible="1"/>
+        <field name="has_prepayment" tree_invisible="1"/>
         <button string="Synchronize Prepayment" name="sync_prepayment" tree_invisible="1"/>
     </xpath>
 </data>
