claim_indemnification: Properly detect dates needs on indemnifications (#2274)
Also rename with_end_date to has_end_date for safety

Fix #10087

--- a/modules/claim_indemnification/view/claim_select_service.xml
+++ b/modules/claim_indemnification/view/claim_select_service.xml
@@ -17,5 +17,5 @@
     <field name="start_date"/>
     <label name="end_date"/>
     <field name="end_date"/>
-    <field name="with_end_date" invisible="1"/>
+    <field name="has_end_date" invisible="1"/>
 </form>
