--- a/modules/endorsement_option_benefit/view/endorsement_option_benefit_displayer_list.xml
+++ b/modules/endorsement_option_benefit/view/endorsement_option_benefit_displayer_list.xml
@@ -2,6 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of -->
 <!-- this repository contains the full copyright notices and license terms. -->
 <tree>
+    <field name="parent_name" expand="1"/>
     <field name="display_name" expand="1"/>
     <field name="contract" tree_invisible="1"/>
     <field name="parent" tree_invisible="1"/>
