--- a/modules/analytic_coog/view/analytic_line_form.xml
+++ b/modules/analytic_coog/view/analytic_line_form.xml
@@ -3,7 +3,6 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/field[@name='credit']" position="after">
-        <label name="extra_details"/>
-        <field name="extra_details"/>
+        <field name="extra_details" no_command="1" colspan="2"/>
     </xpath>
 </data>
