claim_pasrau: handle business id and create new pasrau rate object linked to move lines (#2356)
Fix #10293

--- a/modules/claim_pasrau/view/party_pasrau_rate_form.xml
+++ b/modules/claim_pasrau/view/party_pasrau_rate_form.xml
@@ -10,4 +10,6 @@ this repository contains the full copyright notices and license terms. -->
 	<field name="effective_date"/>
 	<label name="origin"/>
 	<field name="origin"/>
+    <label name="business_id"/>
+    <field name="business_id"/>
 </form>
