--- a/modules/claim_pasrau/view/party_pasrau_rate_tree.xml
+++ b/modules/claim_pasrau/view/party_pasrau_rate_tree.xml
@@ -8,4 +8,5 @@ this repository contains the full copyright notices and license terms. -->
 	<field name="party"/>
 	<field name="effective_date"/>
 	<field name="origin"/>
+    <field name="business_id"/>
 </tree>
