--- a/modules/offered/view/extra_data_form.xml
+++ b/modules/offered/view/extra_data_form.xml
@@ -13,6 +13,9 @@ this repository contains the full copyright notices and license terms. -->
             <newline/>
             <label name="type_"/>
             <field name="type_"/>
+            <newline/>
+            <label name="domain"/>
+            <field name="domain"/>
             <field name="selection" colspan="4"/>
             <label name="selection_sorted"/>
             <field name="selection_sorted"/>
