--- a/modules/claim_eligibility/view/benefit_form.xml
+++ b/modules/claim_eligibility/view/benefit_form.xml
@@ -6,7 +6,7 @@ this repository contains the full copyright notices and license terms. -->
         <page string="Eligibility" id="eligibility">
             <label name="refuse_from_rules"/>
             <field name="refuse_from_rules"/>
-            <field name="eligibility_rules" colspan="4"/>
+            <field name="eligibility_rules" colspan="4" mode="form"/>
             <field name="eligibility_decisions" widget="one2many" colspan="4"/>
             <group id='default_decisions' col="6">
                 <label name="decision_default"/>
