--- a/modules/claim_indemnification_group/view/option_benefit_form.xml
+++ b/modules/claim_indemnification_group/view/option_benefit_form.xml
@@ -18,5 +18,6 @@ this repository contains the full copyright notices and license terms. -->
     <group id="invisible">
         <field name="annuity_frequency_required" invisible="1"/>
         <field name="annuity_frequency_forced" invisible="1"/>
+        <field name="contract_status" invisible="1"/>
     </group>
 </form>
