--- a/modules/claim_indemnification/view/indemnification_detail_list.xml
+++ b/modules/claim_indemnification/view/indemnification_detail_list.xml
@@ -15,6 +15,9 @@ this repository contains the full copyright notices and license terms. -->
     <field name="amount">
         <suffix name="currency_symbol"/>
     </field>
+    <field name="forced_base_amount">
+        <suffix name="currency_symbol"/>
+    </field>
     <field name="benefit_description"/>
     <field name="indemnification_beneficiary"/>
     <field name="indemnification_kind" tree_invisible="1"/>
