claim_indemnification: Display indemnification validation/control wizard in dedicated tab (#2510)
* claim_indemnification: Display indemnification validation/control wizard in dedicated tab
Add relate to claim

Fix #10812

* add translations

* Remove claim as it exist

--- a/modules/claim_indemnification/view/indemnification_validate_tree.xml
+++ b/modules/claim_indemnification/view/indemnification_validate_tree.xml
@@ -13,5 +13,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="loss_date"/>
     <field name="contract"/>
     <field name="benefit" width="200"/>
+    <field name="claim"/>
     <field name="note" expand="1"/>
 </tree>
