--- a/modules/claim_indemnification/view/indemnification_control_tree.xml
+++ b/modules/claim_indemnification/view/indemnification_control_tree.xml
@@ -13,6 +13,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="loss_date"/>
     <field name="contract"/>
     <field name="benefit" width="200"/>
+    <field name="claim"/>
     <field name="reason" expand="1" width="150"/>
     <field name="note" expand="1"/>
 </tree>
