--- a/modules/party_cog/view/party_tree.xml
+++ b/modules/party_cog/view/party_tree.xml
@@ -11,6 +11,6 @@ this repository contains the full copyright notices and license terms. -->
         <field name="is_person" tree_invisible="1"/>
         <field name="main_address"/>
         <field name="is_anonymized" tree_invisible="1"/>
-        <button name="button_extract_gpdr_data" string="Extract GPDR Data" tree_invisible="1"/>
+        <button name="button_extract_gdpr_data" string="Extract GDPR Data" tree_invisible="1"/>
     </xpath>
 </data>
