--- a/modules/underwriting/view/underwriting_list.xml
+++ b/modules/underwriting/view/underwriting_list.xml
@@ -5,8 +5,9 @@ this repository contains the full copyright notices and license terms. -->
     <field name="state"/>
     <field name="effective_date"/>
     <field name="type_"/>
+    <field name="result_descriptions"/>
     <field name="on_object"/>
-    <field name="sub_status"/>
+    <field name="document_request_descriptions"/>
     <field name="documents_received"/>
     <field name="party" tree_invisible="1"/>
 </tree>
