--- a/modules/underwriting_process/view/underwriting_list.xml
+++ b/modules/underwriting_process/view/underwriting_list.xml
@@ -2,7 +2,7 @@
 <!-- This file is part of Coog. The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <data>
-    <xpath expr="/tree/field[@name='on_object']" position="after">
+    <xpath expr="/tree/field[@name='document_request_descriptions']" position="before">
         <field name="current_state"/>
     </xpath>
 </data>
