party_cog: Add max length configuration on country address lines (#2525)
Fix #10851

--- a/modules/party_cog/view/country_address_line_form.xml
+++ b/modules/party_cog/view/country_address_line_form.xml
@@ -6,4 +6,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="string"/>
     <label name="name"/>
     <field name="name"/>
+    <label name="max_length"/>
+    <field name="max_length"/>
 </form>
